--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,8 @@ default = ["ssl"]
 ssl = ["openssl", "hyper/ssl"]
 
 [dependencies]
-error-chain = "0.5.0"
+dirs = "2.0.2"
+error-chain = "0.12.2"
 hyper = { version = "0.9", default-features = false }
 openssl = { version = "0.7", optional = true }
 serde = "1.0"
