--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,27 +19,25 @@ appveyor = { repository = "faradayio/boondock", branch = "master", service = "gi
 travis-ci = { repository = "faradayio/boondock", branch = "master" }
 maintenance = { status = "passively-maintained" }
 
-[features]
-# OpenSSL is fairly hard to build on certain platforms, especially if you
-# want to produce release binaries.  So we enable it by default, but allow
-# it to be excluded using `default-features = false`.
-default = ["ssl"]
-
-# Enable OpenSSL both directly and for Hyper.
-ssl = ["openssl", "hyper/ssl"]
+[dev-dependencies]
+env_logger = "0.7.1"
+tokio = { version = "0.2.16", features = ["macros"] }
 
 [dependencies]
+ct-logs = "0.6"
 dirs = "2.0.2"
 error-chain = "0.12.2"
-hyper = { version = "0.9", default-features = false }
-openssl = { version = "0.7", optional = true }
+futures = "0.3.4"
+hyper = "0.13.4"
+hyperlocal = "0.7.0"
+hyper-rustls = "0.20.0"
+log = "0.4.8"
+rustls = "0.17.0"
+rustls-native-certs = "0.3.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+tokio = "0.2.16"
 url = "2.1.1"
+webpki-roots = "0.19"
 
-[target.'cfg(unix)'.dependencies]
-unix_socket = "0.5.0"
-
-[target.'cfg(windows)'.dependencies]
-named_pipe = "0.2.2"
