--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,6 @@ dirs = "2.0.2"
 error-chain = "0.12.2"
 futures = "0.3.4"
 hyper = "0.13.4"
-hyperlocal = "0.7.0"
 hyper-rustls = "0.20.0"
 log = "0.4.8"
 rustls = "0.17.0"
@@ -41,3 +40,5 @@ tokio = "0.2.16"
 url = "2.1.1"
 webpki-roots = "0.19"
 
+[target.'cfg(unix)'.dependencies]
+hyperlocal = "0.7.0"
